// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Api/DataTag Blue smoke-test 1`] = `
<span class="DataTag_dataTag__xyqF4"
      data-tag="M"
>
  M
</span>
`;

exports[`Api/DataTag Red smoke-test 1`] = `
<span class="DataTag_dataTag__xyqF4"
      data-tag="E"
>
  E
</span>
`;

exports[`Api/DataTag Yellow smoke-test 1`] = `
<span class="DataTag_dataTag__xyqF4"
      data-tag="C"
>
  C
</span>
`;
